--- a/src/variables.scss
+++ b/src/variables.scss
@@ -1,4 +1,14 @@
 :root {
-  --bg-main: #cccccc;
-}
+  --base-size: 10px;
+  --box-shadow: 0px 1px 5px rgba(0, 0, 0, 0.2); // тень для блоков, активных элементов
 
+  // colors: 
+  --bg-main-color: #CCCCCC;
+  --main-color: #1C1B1F; //основной цвет шрифта
+  --contrast-color: #FFFFFF; // контрастный цвет шрифта для элементов с темным фоном (хэдэр, кнопки...)
+  --primary-color: #11397E; // основной акцентный цвет - заголовки, фон кнопок, переключателей, date-picker. 
+  --secondary-color: #0090BD; // цвет ссылок, фон иконок в breadcrmps (пройденные шаги), цвет дат в слайдере на странице выбора рейса
+  --auxiliary-color: #74767A; // цвет для вспомогательных элементов (breadcrmps, labels и т.д.)
+  --accent-bg-color: #FFFFFF; // цвет фона для попапов, диалоговых окон, всплывашек, форм
+  --error-color: #B3261E; // цвет сообщений об ошибках (валидация)
+}
