--- a/src/app/core/components/header/components/logo/logo.component.scss
+++ b/src/app/core/components/header/components/logo/logo.component.scss
@@ -11,7 +11,7 @@
   background-repeat: no-repeat;
   background-position: center;
   background-size: contain;
-  background-image: url(../../../../../../assets/header/logo.svg);
+  background-image: url(../../../../../../assets/logo.svg);
 }
 
 .logo-title {
