--- a/src/app/core/components/header/components/logo/logo.component.scss
+++ b/src/app/core/components/header/components/logo/logo.component.scss
@@ -17,6 +17,6 @@
 .logo-title {
   font-size: 1.6rem;
   font-weight: 700;
-  color: #11397E;
+  color: var(--primary-color);
   text-transform: uppercase;
 }
