--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -1,7 +1,15 @@
 :host {
   height: 100vh;
+  display: flex;
+  flex-direction: column;
+  gap: 2rem;
+  align-items: center;
+  max-width: 120rem;
+  padding: 0 2rem;
+  margin: 0 auto;
 }
 
 main {
   flex-grow: 1;
+  width: 100%;
 }
