feat: update page wrapper styles

--- a/src/classes.scss
+++ b/src/classes.scss
@@ -8,6 +8,12 @@
   }
 }
 
+.wrapper {
+  max-width: 120rem;
+  padding: 0 2rem;
+  margin: 2rem auto;
+}
+
 .title {
   color: var(--primary-color);
 }
