--- a/src/app/core/components/header/header.component.html
+++ b/src/app/core/components/header/header.component.html
@@ -1,2 +1,8 @@
-<app-logo></app-logo>
-<app-breadcrumps></app-breadcrumps>
+<header class="wrapper wrapper-header">
+  <app-logo></app-logo>
+  <app-breadcrumps></app-breadcrumps>
+</header>
+
+
+
+
