--- a/src/variables.scss
+++ b/src/variables.scss
@@ -12,5 +12,6 @@
   --accent-bg-color: #FFFFFF; // цвет фона для попапов, диалоговых окон, всплывашек, форм
   --error-color: #B3261E; // цвет сообщений об ошибках (валидация)
 
-  --auxiliary-color-opacity02: #74767a33;
+  --auxiliary-color-opacity02: #74767a33; // использован как фон хедера
+  --neutral-color-90: #f1f3f626; // использован как цвет кнопок хедера
 }
