--- a/src/app/core/components/header/header.component.html
+++ b/src/app/core/components/header/header.component.html
@@ -1,6 +1,7 @@
 <header class="wrapper wrapper-header">
   <app-logo></app-logo>
   <app-breadcrumps></app-breadcrumps>
+  <app-profile></app-profile>
 </header>
 
 
