feat: add basic implementation auth button, move enum and constant for breadcrumbs in local component

--- a/src/app/core/components/header/header.component.html
+++ b/src/app/core/components/header/header.component.html
@@ -2,6 +2,7 @@
   <app-logo></app-logo>
   <app-breadcrumps></app-breadcrumps>
   <app-profile></app-profile>
+  <app-auth></app-auth>
 </header>
 
 
