--- a/src/app/core/components/header/components/auth/auth.component.scss
+++ b/src/app/core/components/header/components/auth/auth.component.scss
@@ -14,7 +14,8 @@
 }
 
 .auth-popup {
-  width: 53rem;
+  max-width: 53rem;
+  width: 100%;
   display: flex;
   position: absolute;
   left: -200vw;
@@ -77,4 +78,21 @@
   border-bottom: 2px solid var(--primary-color);
   margin-bottom: -2px;
   color: var(--primary-color);
+  background-color: var(--contrast-bg-color);
+}
+
+.separator-container {
+  margin: 0;
+  font-size: 1.2rem;
+  width: 100%;
+  display: flex;
+  align-items: center;
+  gap: 1.2rem;
+  word-wrap: none;
+}
+
+.separator-line {
+  flex-grow: 1;
+  height: 0;
+  border: 1px solid var(--auxiliary-color);;
 }
