--- a/src/app/core/components/header/components/auth/components/login-form/login-form.component.html
+++ b/src/app/core/components/header/components/auth/components/login-form/login-form.component.html
@@ -1,1 +1,46 @@
-<p>login-form works!</p>
+<form class="form-container" [formGroup]="loginForm" (submit)="onSubmit()">
+  <mat-form-field class="input-container">
+    <mat-label>Email</mat-label>
+    <input matInput
+      formControlName="email"
+      type="text">
+  </mat-form-field>
+  <div
+    *ngIf="email!.invalid && email!.touched"
+    class="validation">
+      <small class="error-message"
+        *ngIf="loginForm.get('email')!.errors?.['required']">
+          Please enter a login email
+      </small>
+      <small class="error-message"
+      *ngIf="emailErrors?.['email']">
+        The login email is invalid
+      </small>
+  </div>
+  <mat-form-field class="input-container">
+    <mat-label>Password</mat-label>
+    <input matInput
+    autocomplete="on"
+    formControlName="pass"
+    [type]="hide ? 'password' : 'text'">
+    <button mat-icon-button matSuffix
+      type="button"
+      (click)="hide = !hide"
+      [attr.aria-label]="'Hide password'"
+    >
+      <mat-icon>{{hide ? 'visibility_off' : 'visibility'}}</mat-icon>
+    </button>
+  </mat-form-field>
+  <div
+    *ngIf="pass!.invalid && pass!.touched"
+    class="validation">
+      <small class="error-message"
+        *ngIf="passErrors?.['required']">
+          Please enter a password
+      </small>
+  </div>
+  <button mat-button type="submit"
+    class="primary-btn"
+    [disabled]="loginForm.invalid"
+  >Login</button>
+</form>
