refactor: add router service, add basic change style for header

--- a/src/app/core/components/header/header.component.html
+++ b/src/app/core/components/header/header.component.html
@@ -1,10 +1,10 @@
-<header class="wrapper wrapper-header">
-  <app-logo></app-logo>
-  <app-breadcrumps></app-breadcrumps>
-  <app-profile></app-profile>
-  <app-auth></app-auth>
-</header>
-
-
+<div class="header" [ngClass]="{'initial': !isMainPage}">
+  <header class="wrapper wrapper-header">
+    <app-logo></app-logo>
+    <app-breadcrumps></app-breadcrumps>
+    <app-profile></app-profile>
+    <app-auth></app-auth>
+  </header>
+</div>
 
 
