--- a/src/app/core/components/header/header.component.scss
+++ b/src/app/core/components/header/header.component.scss
@@ -1,5 +1,8 @@
 :host {
   width: 100%;
+}
+
+.header {
   display: flex;
   background-color: var(--auxiliary-color-opacity02);
 }
@@ -9,4 +12,7 @@
   align-items: center;
   gap: 1.6rem;
   flex-grow: 1;
+}
+.initial {
+  background-color: var(--accent-bg-color);
 }
