--- a/src/app/core/components/header/components/auth/auth.component.html
+++ b/src/app/core/components/header/components/auth/auth.component.html
@@ -1,6 +1,6 @@
 <div [ngClass]="{'overlay': authService.isPopupActive}" (click)="togglePopup()"></div>
 
-<button class="select-btn select-btn__medium" (click)="togglePopup()">
+<button class="select-btn select-btn__medium select-btn__dark" (click)="togglePopup()">
   <span class="logo"></span>
   <span class="user-state-title" *ngIf="isUserLogin; else userLogout">Sign out</span>
   <ng-template #userLogout>
