feat: add cart icon component

--- a/src/app/core/components/header/header.component.html
+++ b/src/app/core/components/header/header.component.html
@@ -4,6 +4,7 @@
     <app-breadcrumps></app-breadcrumps>
     <app-profile [ngClass]="{'contrast': !isMainPage}"></app-profile>
     <app-auth [ngClass]="{'contrast': !isMainPage}"></app-auth>
+    <app-cart [ngClass]="{'contrast': !isMainPage}"></app-cart>
   </header>
 </div>
 
