feat: add icon cart items count, add basic adaptive style for header and auth forms

--- a/src/app/core/components/header/components/auth/components/register-form/register-form.component.scss
+++ b/src/app/core/components/header/components/auth/components/register-form/register-form.component.scss
@@ -96,6 +96,10 @@
   display: grid;
   grid-template-columns: 1fr 1fr;
   gap: 0.8rem;
+
+  @media screen and (max-width: 650px) {
+    grid-template-columns: 1fr;
+  }
 }
 
 .number-content {
