--- a/src/app/core/components/header/components/auth/auth.component.scss
+++ b/src/app/core/components/header/components/auth/auth.component.scss
@@ -23,6 +23,22 @@
   z-index: 10;
   display: flex;
   gap: 1rem;
+
+  @media screen and (max-width: 650px) {
+    max-width: 45rem;
+  }
+
+  @media screen and (max-width: 550px) {
+    max-width: 40rem;
+  }
+
+  @media screen and (max-width: 450px) {
+    max-width: 35rem;
+  }
+
+  @media screen and (max-width: 375px) {
+    max-width: 31rem;
+  }
 }
 
 .close {
@@ -36,6 +52,22 @@
 
 .active {
   left: calc(50% - 53rem/2);
+
+  @media screen and (max-width: 650px) {
+    left: calc(50% - 45rem/2);
+  }
+
+  @media screen and (max-width: 550px) {
+    left: calc(50% - 40rem/2);
+  }
+
+  @media screen and (max-width: 450px) {
+    left: calc(50% - 35rem/2);
+  }
+
+  @media screen and (max-width: 375px) {
+    left: calc(50% - 31rem/2);
+  }
 }
 
 .overlay {
@@ -58,6 +90,11 @@
   flex-grow: 1;
   background-color: var(--accent-bg-color);
   border-radius: 0.5rem;
+  border: 1px solid var(--auxiliary-color);
+
+  @media screen and (max-width: 550px) {
+    padding: 1.5rem 1.2rem;
+  }
 }
 
 .btns-container {
