--- a/src/app/core/components/header/components/cart/cart.component.html
+++ b/src/app/core/components/header/components/cart/cart.component.html
@@ -1,3 +1,10 @@
 <div class="cart-icon-container" (click)="navToCart()">
   <span class="cart-icon cart-icon_dark"></span>
+  <span class="icon">
+    <span
+      class="icon-count"
+      *ngIf="count > 0">
+        {{count}}
+    </span>
+</span>
 </div>
