--- a/src/app/core/components/header/components/cart/cart.component.scss
+++ b/src/app/core/components/header/components/cart/cart.component.scss
@@ -20,3 +20,26 @@
     }
   }
 }
+
+.icon {
+  width: 1.7rem;
+  height: 1.7rem;
+  display: inline-flex;
+  position: relative;
+  left: -10px;
+  top: -5px;
+  justify-content: center;
+  border-radius: 50%;
+  background-color: var(--error-color);
+
+}
+
+.icon-count {
+  display: inline-flex;
+  position: relative;
+  align-items: center;
+  color: var(--contrast-color);
+  font-size: 1.2rem;
+  font-weight: 600;
+  line-height: 1.6rem;
+}
