--- a/src/app/core/components/header/components/auth/components/register-form/register-form.component.scss
+++ b/src/app/core/components/header/components/auth/components/register-form/register-form.component.scss
@@ -27,7 +27,7 @@
   color: var(--error-color);
 }
 
-::ng-deep {
+:host ::ng-deep {
   .mat-mdc-form-field-subscript-wrapper {
     display: none;
   }
