--- a/src/app/core/components/header/components/auth/components/register-form/register-form.component.html
+++ b/src/app/core/components/header/components/auth/components/register-form/register-form.component.html
@@ -22,17 +22,24 @@
 
   <mat-form-field class="input-container" [ngClass]="{'invalid': pass!.invalid && pass!.touched}">
     <mat-label>Password</mat-label>
-    <input matInput
-    autocomplete="on"
-    formControlName="pass"
-    [type]="hide ? 'password' : 'text'">
-    <button mat-icon-button matSuffix
-      type="button"
-      (click)="hide = !hide"
-      [attr.aria-label]="'Hide password'"
-    >
-      <mat-icon>{{hide ? 'visibility_off' : 'visibility'}}</mat-icon>
-    </button>
+      <input matInput
+      autocomplete="on"
+      formControlName="pass">
+
+      <mat-icon matSuffix class="info-modal-icon" [matMenuTriggerFor]="passMenu"
+        *ngIf="!(pass!.invalid && pass!.touched); else errorPassIcon"
+      >error_outline
+      </mat-icon>
+      <ng-template #errorPassIcon>
+          <mat-icon matSuffix class="invalid-icon" [matMenuTriggerFor]="passMenu">error</mat-icon>
+      </ng-template>
+
+      <mat-menu #passMenu="matMenu">
+        <span class="menu-content">
+          Create a password. Password should contain minimum 8 characters, contain numbers both uppercase and lowercase letters and special characters.
+        </span>
+      </mat-menu>
+
   </mat-form-field>
 
   <div
@@ -61,13 +68,19 @@
     <input matInput
       formControlName="firstName"
       type="text">
-    <mat-icon matSuffix
+    <mat-icon matSuffix [matMenuTriggerFor]="firstNameMenu"
       *ngIf="!(firstName!.invalid && firstName!.touched); else errorFirstNameIcon"
       >error_outline
     </mat-icon>
     <ng-template #errorFirstNameIcon>
-      <mat-icon matSuffix class="invalid-icon">error</mat-icon>
+      <mat-icon matSuffix class="invalid-icon" [matMenuTriggerFor]="firstNameMenu">error</mat-icon>
     </ng-template>
+
+  <mat-menu #firstNameMenu="matMenu">
+    <span class="menu-content">
+      Add the passenger's first name as it is written on their documents (passport or ID). Do not use any accents or special characters. Do not use a nickname.
+    </span>
+  </mat-menu>
 
   </mat-form-field>
 
@@ -88,18 +101,27 @@
     </small>
   </div>
 
-  <mat-form-field class="input-container" [ngClass]="{'invalid': lastName!.invalid && lastName!.touched}">
+  <mat-form-field class="input-container"
+    [ngClass]="{'invalid': lastName!.invalid && lastName!.touched}"
+  >
     <mat-label>Last name</mat-label>
     <input matInput
       formControlName="lastName"
       type="text">
-      <mat-icon matSuffix
+      <mat-icon matSuffix [matMenuTriggerFor]="lastNameMenu"
       *ngIf="!(lastName!.invalid && lastName!.touched); else errorLastNameIcon"
       >error_outline
     </mat-icon>
-    <ng-template #errorLastNameIcon>
-      <mat-icon matSuffix class="invalid-icon">error</mat-icon>
+    <ng-template #errorLastNameIcon >
+      <mat-icon matSuffix class="invalid-icon" [matMenuTriggerFor]="lastNameMenu">error</mat-icon>
     </ng-template>
+
+    <mat-menu #lastNameMenu="matMenu">
+      <span class="menu-content">
+        Add the passenger's last name as it is written on their documents (passport or ID). Do not use any accents or special characters. Do not use a nickname.
+      </span>
+    </mat-menu>
+
   </mat-form-field>
 
   <div
