--- a/src/app/core/components/header/components/auth/components/register-form/register-form.component.scss
+++ b/src/app/core/components/header/components/auth/components/register-form/register-form.component.scss
@@ -25,9 +25,18 @@
 
 .invalid-icon {
   color: var(--error-color);
+  cursor: pointer;
 }
 
-:host ::ng-deep {
+.menu-content {
+  font-size: 1.2rem;
+}
+
+.info-modal-icon {
+  cursor: pointer;
+}
+
+::ng-deep {
   .mat-mdc-form-field-subscript-wrapper {
     display: none;
   }
@@ -50,6 +59,12 @@
 
   .mat-mdc-checkbox.mat-accent .mdc-checkbox--selected~.mdc-checkbox__ripple {
     background: var(--primary-color);
+  }
+
+  .mat-mdc-menu-content {
+    max-width: 16rem;
+    line-height: 1.2rem;
+    padding: 0.5rem;
   }
 }
 
