--- a/src/app/core/components/header/components/auth/components/register-form/register-form.component.scss
+++ b/src/app/core/components/header/components/auth/components/register-form/register-form.component.scss
@@ -64,7 +64,7 @@
   .mat-mdc-menu-content {
     max-width: 16rem;
     line-height: 1.2rem;
-    padding: 0.5rem;
+    padding: 0.5rem !important;
   }
 }
 
