fix: fix import shared module into other modules

--- a/src/app/shared/components/passengers-info-form/passengers-info-form.component.html
+++ b/src/app/shared/components/passengers-info-form/passengers-info-form.component.html
@@ -1,4 +1,4 @@
-<form [formGroup]="passengerFormGroup">
+<div [formGroup]="passengerFormGroup">
 
     <mat-form-field class="input-container"
       [ngClass]="{'invalid': passengersInfoServiceService.firstName!.invalid && passengersInfoServiceService.firstName!.touched}"
@@ -109,4 +109,4 @@
      </button>
      </div>
 
-</form>
+</div>
